tests/baselines/reference/requireOfJsonFileWithoutResolveJsonModule.errors.txt
b.json(1,1): error TS1005: '{' expected.
b.json(1,1): error TS1136: Property assignment expected.
b.json(1,10): error TS1005: ',' expected.
b.json(1,10): error TS1136: Property assignment expected.
b.json(1,14): error TS1005: ',' expected.
b.json(1,14): error TS1136: Property assignment expected.
b.json(1,18): error TS1005: '}' expected.
file1.ts(2,12): error TS2339: Property 'a' does not exist on type '{ contents: any; Not: any; read: any; }'.
file1.ts(5,16): error TS2339: Property 'b' does not exist on type '{ contents: any; Not: any; read: any; }'.
file1.ts(6,13): error TS2339: Property 'b' does not exist on type '{ contents: any; Not: any; read: any; }'.


==== file1.ts (3 errors) ====
    import b1 = require('./b.json'); // error
    let x = b1.a;
               ~
!!! error TS2339: Property 'a' does not exist on type '{ contents: any; Not: any; read: any; }'.
    import b2 = require('./b.json'); // error
    if (x) {
        let b = b2.b;
                   ~
!!! error TS2339: Property 'b' does not exist on type '{ contents: any; Not: any; read: any; }'.
        x = (b1.b === b);
                ~
!!! error TS2339: Property 'b' does not exist on type '{ contents: any; Not: any; read: any; }'.
    }
    
==== b.json (7 errors) ====
    contents Not read
    ~~~~~~~~
!!! error TS1005: '{' expected.
    ~~~~~~~~
!!! error TS1136: Property assignment expected.
             ~~~
!!! error TS1005: ',' expected.
             ~~~
!!! error TS1136: Property assignment expected.
                 ~~~~
!!! error TS1005: ',' expected.
                 ~~~~
!!! error TS1136: Property assignment expected.
                     
!!! error TS1005: '}' expected.